# dashboard-template-database

./: .gitignore  404.html  LICENSE  README.md  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: test-and-deploy.yaml
api/builders/schema/SchemaBuilder/: index.html
api/builders/tables/DuckdbTablesBuilder/: index.html
api/loaders/local/Loader/: index.html
api/loaders/s3/S3Loader/: index.html
api/loaders/s3/_S3Connection/: index.html
api/storage/Loader/: index.html
api/storage/Saver/: index.html
api/storage/local/load_local/: index.html
api/storage/local/save_local/: index.html
api/storage/s3/S3Loader/: index.html
api/storage/s3/S3Saver/: index.html
api/storage/s3/_S3Connection/: index.html
api/utils/_init_logger/: index.html
dashboard-template-database/builders/: base.py
dashboard_template_database/: __init__.py
dashboard_template_database/builders/: __init__.py  schema.py  tables.py
dashboard_template_database/loaders/: __init__.py
dashboard_template_database/loaders/local/: loader.py
dashboard_template_database/loaders/s3/: __init__.py  _connection.py  loader.py
dashboard_template_database/storage/: loader.py  saver.py
dashboard_template_database/storage/local/: __init__.py  loader.py  saver.py
dashboard_template_database/storage/s3/: __init__.py  _connection.py  loader.py  saver.py
dashboard_template_database/utils/: __init__.py  logger.py
docs/: index.md
docs/api/builders/: DuckdbTablesBuilder.md  SchemaBuilder.md
docs/api/builders/tables/: DuckdbTablesBuilder.md
docs/api/loaders/local/: Loader.md
docs/api/loaders/s3/: S3Loader.md  _S3Connection.md
docs/api/storage/: Loader.md  Saver.md
docs/api/utils/: _init_logger.md
notebooks/: 0 - Construction de la base de données.ipynb
parameters/: labels.json
scripts/: main.py
search/: search_index.json
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/test_builders/: test_schema.py  test_tables.py
tests/unit/test_loaders/: test_local.py  test_s3.py
tests/unit/test_storage/: test_loader.py  test_s3.py  test_saver.py
tests/unit/test_utils/: test_logger.py
(+5 files in other folders)
