[tool.poetry]
name = "dashboard-template-database"
version = "0.1.0"
description = "DuckDB Database for dashboard template"
authors = ["Quentin Bolliet <bolliet.quentin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
datetime = "^5.5"
duckdb = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
