[tool.poetry]
name = "dashboard-template-database"
version = "0.1.0"
description = "DuckDB Database for dashboard template"
authors = ["Quentin Bolliet <bolliet.quentin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
duckdb = "^1.1.3"
pathlib = "^1.0.1"
boto3 = "^1.34.34"
s3fs = "^2024.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"
moto = {extras = ["s3"], version = "^5.0.27"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.13.0"
mkdocs-material = "^9.5.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
